# ffmpeg_kit_flutter

./: .gitattributes  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  README_HARDWARE.md  pubspec.yaml
android/: build.gradle  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  ffmpegkit.c  ffmpegkit.h  ffmpegkit_abidetect.c  ffmpegkit_abidetect.h  ffprobekit.c  ffprobekit.h  fftools_cmdutils.c  fftools_cmdutils.h  fftools_ffmpeg.c  fftools_ffmpeg.h  fftools_ffmpeg_demux.c  fftools_ffmpeg_filter.c  fftools_ffmpeg_hw.c  fftools_ffmpeg_mux.c  fftools_ffmpeg_mux.h  fftools_ffmpeg_mux_init.c  fftools_ffmpeg_opt.c  fftools_ffprobe.c  fftools_objpool.c  fftools_objpool.h  fftools_opt_common.c  fftools_sync_queue.c  fftools_sync_queue.h  fftools_thread_queue.c  fftools_thread_queue.h
android/src/main/java/com/antonkarpenko/ffmpegkit/: Abi.java  AbiDetect.java  AbstractSession.java  AsyncFFmpegExecuteTask.java  AsyncFFprobeExecuteTask.java  AsyncGetMediaInformationTask.java  CameraSupport.java  Chapter.java  FFmpegKit.java  FFmpegKitConfig.java  FFmpegKitFlutterPlugin.java  FFmpegSession.java  FFmpegSessionCompleteCallback.java  FFprobeKit.java  FFprobeSession.java  FFprobeSessionCompleteCallback.java  Level.java  Log.java  LogCallback.java  LogRedirectionStrategy.java  MediaInformation.java  MediaInformationJsonParser.java  MediaInformationSession.java  MediaInformationSessionCompleteCallback.java  NativeLoader.java  Packages.java  ReturnCode.java  Session.java  SessionState.java  Signal.java  Statistics.java  StatisticsCallback.java  StreamInformation.java
docs/: BUILD_GUIDE.md  SCRIPTS_GUIDE.md  SCRIPTS_SUMMARY.md
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/integration_test/: ffmpeg_kit_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
ios/: ffmpeg_kit_flutter_new.podspec  ffmpeg_kit_flutter_new_audio.podspec  ffmpeg_kit_flutter_new_full.podspec  ffmpeg_kit_flutter_new_https.podspec  ffmpeg_kit_flutter_new_https_gpl.podspec  ffmpeg_kit_flutter_new_min.podspec  ffmpeg_kit_flutter_new_min_gpl.podspec  ffmpeg_kit_flutter_new_video.podspec
ios/Frameworks/ffmpegkit.framework/: ffmpegkit
ios/Frameworks/libavdevice.framework/: libavdevice
ios/Frameworks/libavutil.framework/: libavutil
ios/Frameworks/libswresample.framework/: libswresample
ios/Frameworks/libswscale.framework/: libswscale
ios/ffmpeg_kit_flutter_new/: Package.swift
ios/ffmpeg_kit_flutter_new_audio/: Package.swift
ios/ffmpeg_kit_flutter_new_full/: Package.swift
ios/ffmpeg_kit_flutter_new_https/: Package.swift
ios/ffmpeg_kit_flutter_new_https_gpl/: Package.swift
ios/ffmpeg_kit_flutter_new_min/: Package.swift
ios/ffmpeg_kit_flutter_new_min_gpl/: Package.swift
ios/ffmpeg_kit_flutter_new_video/: Package.swift
lib/: abstract_session.dart  extensions.dart  ffmpeg_kit.dart  ffmpeg_kit_config.dart  ffmpeg_session.dart  ffprobe_kit.dart
lib/src/: ffmpeg_kit_factory.dart  ffmpeg_kit_flutter_initializer.dart
macos/: ffmpeg_kit_flutter_new.podspec  ffmpeg_kit_flutter_new_audio.podspec  ffmpeg_kit_flutter_new_full.podspec  ffmpeg_kit_flutter_new_https.podspec  ffmpeg_kit_flutter_new_https_gpl.podspec  ffmpeg_kit_flutter_new_min.podspec  ffmpeg_kit_flutter_new_min_gpl.podspec  ffmpeg_kit_flutter_new_video.podspec
macos/ffmpeg_kit_flutter_new/: Package.swift
macos/ffmpeg_kit_flutter_new_audio/: Package.swift
macos/ffmpeg_kit_flutter_new_full/: Package.swift
macos/ffmpeg_kit_flutter_new_https/: Package.swift
macos/ffmpeg_kit_flutter_new_https_gpl/: Package.swift
macos/ffmpeg_kit_flutter_new_min/: Package.swift
macos/ffmpeg_kit_flutter_new_min_gpl/: Package.swift
macos/ffmpeg_kit_flutter_new_video/: Package.swift
scripts/: build_all_hw.sh  build_android_hw.sh  build_ios_hw.sh  build_macos_hw.sh  build_spm_artifacts.sh  prepare_binaries.sh  setup_android.sh  setup_ios.sh  setup_macos.sh  test_hardware_acceleration.sh  verify_android_mediacodec.sh  verify_hardware_setup.sh  verify_videotoolbox_working.sh
tests/: test_invariant_Packages.cpp
windows/: CMakeLists.txt  ffmpeg_kit_flutter_plugin.cpp  ffmpeg_kit_flutter_plugin.h  ffmpeg_kit_flutter_plugin_c_api.cpp
windows/src/: AbstractSession.cpp  AbstractSession.h  Chapter.h  FFmpegKitConfig.cpp  FFmpegKitConfig.h  MediaInformation.h  Packages.cpp  Statistics.h  StreamInformation.h  ffmpegkit_c_api.cpp  ffmpegkit_c_api.h  fftools_ffmpeg.c  fftools_ffprobe.c
